<resources>
    <string name="app_name">User Input</string>
    <string name="sign_up">SIGN UP</string>
    <string name="date">Date</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="accept_terms_and_conditions">Accept Terms and conditions</string>
</resources>